--- a/styles.css
+++ b/styles.css
@@ -134,5 +134,73 @@ nav img{
     .nav-links ul {
         padding: 30px;
     }
+
    
+}
+/*cours seasion
+*/
+.cours{
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    padding-top: 50px;
+}
+.cours-col{
+   flex-basis: 32%;
+   border-radius: 10px;
+   margin-bottom: 30px;
+   position: relative;
+   overflow: hidden; 
+}
+.cours-col img{
+    width: 100%;
+}
+.layer{
+    background: transparent;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: 0.5s;
+}
+.layer:hover{
+    background: rgba(4,9,30,0.7);
+}
+.grid-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr); 
+    gap: 20px; 
+    margin-top: 20px;
+}
+
+.cours-col {
+    position: relative;
+    overflow: hidden;
+    border-radius: 10px;
+    transition: transform 0.3s ease; 
+    aspect-ratio: 2/1 ;
+}
+
+.cours-col img {
+    width: 100%;
+    height: auto;
+    display: block;
+    
+}
+
+.cours-col h3 {
+    position: absolute;
+    bottom: 10px;
+    left: 10px;
+    color: white;
+    font-size: 16px;
+    background-color: rgba(0, 0, 0, 0.6); 
+    padding: 5px 10px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+.cours-col:hover {
+    transform: scale(1.05); 
 }
