--- a/styles.css
+++ b/styles.css
@@ -168,14 +168,17 @@ nav img{
     background: rgba(4,9,30,0.7);
 }
 .grid-container {
-    display: grid;
+    display: flex;
+    flex-wrap: wrap;
     grid-template-columns: repeat(3, 1fr); 
     gap: 20px; 
     margin-top: 20px;
+    justify-content: center;
 }
 
 .cours-col {
     position: relative;
+    min-width: 200px;
     overflow: hidden;
     border-radius: 10px;
     transition: transform 0.3s ease; 
@@ -184,21 +187,21 @@ nav img{
 
 .cours-col img {
     width: 100%;
-    height: auto;
+    height: 100%;
     display: block;
+    object-fit: cover;
     
 }
 
 .cours-col h3 {
     position: absolute;
     bottom: 10px;
-    left: 10px;
     color: white;
     font-size: 16px;
     background-color: rgba(0, 0, 0, 0.6); 
     padding: 5px 10px;
-    border-radius: 5px;
-    text-align: center;
+    border-radius: 0 5px 5px 0;
+    margin-right: 5px;
 }
 
 .cours-col:hover {
