--- a/styles.css
+++ b/styles.css
@@ -224,3 +224,48 @@ nav img{
 .cours-col:hover {
     transform: scale(1.05); 
 }
+
+.about-us {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+    background: linear-gradient(135deg, #f5f5f5 0%, #e0f7fa 100%);
+
+  }
+  
+  .about-us h2 {
+    font-size: 2em;
+    color: #333;
+    margin-bottom: 20px;
+  }
+  
+  .about-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+  }
+  
+  .about-content img {
+    width: 500px;
+    border-radius: 10%;
+    border: 100px 100px #333;
+  }
+
+  .about-image::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, rgba(245, 245, 245, 1) 0%, rgba(245, 245, 245, 0) 100%);
+  }
+  
+  .about-content p {
+    font-size: 1.1em;
+    color: #555;
+    max-width: 500px;
+    line-height: 1.6;
+  }
+  
