--- a/styles.css
+++ b/styles.css
@@ -345,6 +345,19 @@ nav img{
   transition: color 0.3s ease;
 }
 
+.footer ul li::after{
+  content: '';
+  width: 0%;
+  height: 2px;
+  background: #f44336;
+  display: block;
+  margin: auto;
+  transition: 0.5s;
+}
+footer ul li:hover::after{
+  width: 20%;
+}
+
 .footer ul li a:hover {
   color: #f44336;
 }
