--- a/geni informatique/styles.css
+++ b/geni informatique/styles.css
@@ -54,14 +54,15 @@
   .nav-links ul li:hover::after{
     width: 100%;
   }
-  .topnav input[type=text] {
-    float: right;
+ 
+  .text-box input[type=text] {
     padding: 6px;
-    border: none;
+    border-radius: 20px;
     margin-top: 8px;
     margin-right: 16px;
     font-size: 17px;
   }
+
   .text-box{
     width: 90%;
     color: white;
@@ -172,136 +173,7 @@
     width: 100%;
     
   }
-  .layer{
-    background: transparent;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    transition: 0.5s;
-    
-  }
-  .layer:hover{
-    background: rgba(4,9,30,0.7);
-  }
-  .grid-container {
-    display: flex;
-    flex-wrap: wrap;
-    grid-template-columns: repeat(3, 1fr); 
-    gap: 20px; 
-    margin-top: 20px;
-    justify-content: center;
-    
-  }
   
-  .cours-col {
-    position: relative;
-    min-width: 200px;
-    overflow: hidden;
-    border-radius: 10px;
-    transition: transform 0.3s ease; 
-    aspect-ratio: 2/1 ;
-    
-    
-  }
-  .cours-col:hover{
-    box-shadow: 1px 1px 10px ;
-  
-  }
-  
-  .cours-col img {
-    width: 100%;
-    height: 100%;
-    display: block;
-    object-fit: cover;
-    
-  }
-  
-  .cours-col h3 {
-    position: absolute;
-    bottom: -30px;
-    color: white;
-    font-size: 16px;
-    background-color: rgba(0, 0, 0, 0.6); 
-    padding: 10px;
-    opacity: 0;
-    text-align: center;
-    left: 0;
-    right: 0;
-  }
-  
-  .cours-col:hover h3 {
-    bottom: 0;
-    transition: 0.6s;
-    opacity: 1;
-  }
-  .cours-col:hover {
-    transform: scale(1.05); 
-  }
-  
-  .about-us {
-    width: 100%;
-    text-align: center;
-    background: linear-gradient(135deg, #f5f5f5 0%, #e0f7fa 100%);
-    box-sizing: border-box;
-    padding: 20px;
-  }
-  
-  .about-us h2 {
-    font-size: 2em;
-    color: #333;
-    margin-bottom: 20px;
-    text-align: 20px;
-  }
-  
-  .about-content {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
-    flex-wrap: wrap;
-  }
-  
-  .about-content img {
-    width: 500px;
-    border-radius: 10%;
-    border: 100px 100px #333;
-  }
-  
-  .about-image::after {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(to right, rgba(245, 245, 245, 1) 0%, rgba(245, 245, 245, 0) 100%);
-  }
-  
-  .about-content p {
-    font-size: 1.1em;
-    color: #555;
-    max-width: 500px;
-    line-height: 1.6;
-  }
-  .contact-us {
-    margin: 100px auto;
-    width: 80%;
-    background-image: 
-        linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), 
-        url('imgs/contactus.jpg');
-    background-position: center;
-    background-size: cover;
-    border-radius: 10px;
-    text-align: center;
-    padding: 100px 0;
-    min-height: 300px;
-  }
-  .contact-us h1,p {
-    color: #fff;
-    
-  }
   /*--------------------------------------------------*/
   /* Footer Styles */
   .footer {
