--- a/styles.css
+++ b/styles.css
@@ -287,13 +287,48 @@ nav img{
   background-size: cover;
   border-radius: 10px;
   text-align: center;
-  padding: 100px 0;
-  min-height: 300px;
+  padding: 100px 20px;
+  min-height: 400px;
 }
 .contact-us h1,p {
   color: #fff;
+  margin-bottom: 20px;
   
 }
+.contact-form{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 15px;
+  max-width: 500px;
+  margin: 0 auto;
+}
+.contact-form input,
+.contact-form textarea{
+  width: 100%;
+  max-width: 400px;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  font-size: 16px;
+  outline: none;
+}
+.contact-form button{
+  padding: 10px 20px;
+  background-color: white;
+  color: black;
+  font-size: 16px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+.contact-form button:hover {
+  background-color: #4c47d5;
+}
+
+
+
 /*--------------------------------------------------*/
 /* Footer Styles */
 .footer {
