modules add with swiper

--- a/geni informatique/styles.css
+++ b/geni informatique/styles.css
@@ -169,24 +169,81 @@
   /*cours seasion
   */
   .cours{
-    width: 80%;
-    margin: auto;
-    text-align: center;
-    padding-top: 50px;
-    
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   min-height: 100vh;
+   background: linear-gradient(#ECEFFE, #ced6fb);
   }
-  .cours-col{
-   flex-basis: 32%;
-   border-radius: 10px;
-   margin-bottom: 30px;
-   position: relative;
-   overflow: hidden;
-    
+
+
+  .card-list .card-item{
+    list-style: none;
   }
-  .cours-col img{
-    width: 100%;
-    
-  }
+.card-list .card-item .card-link{
+  width: 400px;
+  display: block;
+  background: white;
+  padding: 18px;
+  border-radius: 12px;
+  text-decoration: none;
+  border: 2px solid transparent;
+  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
+  transition: 0.2s ease;
+
+}
+.card-list .card-item .card-link:hover{
+  border-color: #5372f0;
+
+}
+.card-list .card-link .card-image{
+  width: 100%;
+  aspect-ratio: 16 / 9;
+  object-fit: cover;
+  border-radius: 10px;
+}
+.card-list .card-link .badge{
+  color: #5372f0;
+  padding: 8px 16px;
+  font-size: 0.95rem;
+  font-weight: 500;
+  margin: 16px 0 18px;
+  background: #DDE4FF;
+  width: fit-content;
+  border-radius: 50px;
+}
+.card-list .card-link .card-title{
+  font-size: 1.19rem;
+  color: black;
+  font-weight: 600;
+}
+
+.card-list .card-link .material-symbols-rounded{
+  height: 35px;
+  width: 35px;
+  color: #5372f0;
+  border-radius: 50%;
+  margin: 30px 0 5px;
+  background: none;
+  cursor: pointer;
+  border: 2px solid #5372f0;
+  transform: rotate(-45deg);
+  transition: 0.4s ease;
+}
+.card-list .card-link:hover .material-symbols-rounded{
+  color: white;
+  background: #5372f0;
+
+}
+
+
+
+
+
+
+
+
+
   
   /*--------------------------------------------------*/
   /* Footer Styles */
