--- a/geni informatique/styles.css
+++ b/geni informatique/styles.css
@@ -168,73 +168,82 @@
   }
   /*cours seasion
   */
-  .cours{
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   min-height: 100vh;
-   background: linear-gradient(#ECEFFE, #ced6fb);
+  .cours {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background: linear-gradient(#eceffe, #ced6fb);
+    padding: 20px;
   }
-
-
-  .card-list .card-item{
+  
+  .card-wrapper {
+    display: flex;
+    gap: 20px;
+  }
+  
+  .card-item {
     list-style: none;
   }
-.card-list .card-item .card-link{
-  user-select: none;
-  display: block;
-  background: white;
-  padding: 18px;
-  border-radius: 12px;
-  text-decoration: none;
-  border: 2px solid transparent;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
-  transition: 0.2s ease;
-
-}
-.card-list .card-item .card-link:hover{
-  border-color: #5372f0;
-
-}
-.card-list .card-link .card-image{
-  width: 100%;
-  aspect-ratio: 16 / 9;
-  object-fit: cover;
-  border-radius: 10px;
-}
-.card-list .card-link .badge{
-  color: #5372f0;
-  padding: 8px 16px;
-  font-size: 0.95rem;
-  font-weight: 500;
-  margin: 16px 0 18px;
-  background: #DDE4FF;
-  width: fit-content;
-  border-radius: 50px;
-}
-.card-list .card-link .card-title{
-  font-size: 1.19rem;
-  color: black;
-  font-weight: 600;
-}
-
-.card-list .card-link .material-symbols-rounded{
-  height: 35px;
-  width: 35px;
-  color: #5372f0;
-  border-radius: 50%;
-  margin: 30px 0 5px;
-  background: none;
-  cursor: pointer;
-  border: 2px solid #5372f0;
-  transform: rotate(-45deg);
-  transition: 0.4s ease;
-}
-.card-list .card-link:hover .material-symbols-rounded{
-  color: white;
-  background: #5372f0;
-
-}
+  
+  .card-link {
+    display: block;
+    background: white;
+    padding: 12px;
+    border-radius: 12px;
+    text-decoration: none;
+    border: 2px solid transparent;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.05);
+    transition: 0.2s ease;
+  }
+  
+  .card-link:hover {
+    border-color: #5372f0;
+  }
+  
+  .card-image {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16 / 9;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+  
+  .badge {
+    color: #5372f0;
+    padding: 8px 16px;
+    font-size: 0.85rem;
+    font-weight: 500;
+    margin: 12px 0 16px;
+    background: #dde4ff;
+    width: fit-content;
+    border-radius: 50px;
+  }
+  
+  .card-title {
+    font-size: 1rem;
+    color: black;
+    font-weight: 600;
+  }
+  
+  .material-symbols-rounded {
+    height: 30px;
+    width: 30px;
+    color: #5372f0;
+    border-radius: 50%;
+    margin: 20px 0 5px;
+    background: none;
+    cursor: pointer;
+    border: 2px solid #5372f0;
+    transform: rotate(-45deg);
+    transition: 0.4s ease;
+  }
+  
+  .material-symbols-rounded:hover {
+    color: white;
+    background: #5372f0;
+  }
+  
 
 
 
