akhir push olah lyouma

--- a/styles.css
+++ b/styles.css
@@ -143,8 +143,8 @@ nav img{
 
  
 }
-/*cours seasion
-*/
+/*--------------------------------------- cours  --------------------------------------------------*/
+
 .cours{
   width: 80%;
   margin: auto;
@@ -231,6 +231,7 @@ nav img{
 .cours-col:hover {
   transform: scale(1.05); 
 }
+/*--------------------------------------- about us  --------------------------------------------------*/
 
 .about-us {
   width: 100%;
@@ -277,6 +278,8 @@ nav img{
   max-width: 500px;
   line-height: 1.6;
 }
+/*--------------------------------------- contact us  --------------------------------------------------*/
+
 .contact-us {
   margin: 100px auto;
   width: 80%;
@@ -329,8 +332,8 @@ nav img{
 
 
 
-/*--------------------------------------------------*/
-/* Footer Styles */
+/*--------------------------------------- footer  --------------------------------------------------*/
+
 .footer {
   background-color: #242525;
   color: #e2e2e2;
@@ -428,7 +431,7 @@ footer ul li:hover::after{
   color: #f44336;
 }
 
-/* Chatbot Button */
+/*--------------------------------------- Chatbot Button --------------------------------------------------*/
 .chatbot-container {
   position: fixed;
   bottom: 20px;
