--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,9 @@
   padding: 0;
   font-family: 'Poppins',sans-serif;
 }
+html{
+  scroll-behavior: smooth;
+}
 .header{
   min-height: 100vh;
   width: 100%;
@@ -239,7 +242,7 @@ nav img{
   align-items: center;
   justify-content: center;
   padding: 50px 20px;
-  background-color: #f9f9f9;
+  background-color: #242525;
 }
 
 .about-container {
@@ -260,13 +263,13 @@ nav img{
 
 .about-text h1 {
   font-size: 2.5rem;
-  color: #333;
+  color: #f44336;
   margin-bottom: 20px;
 }
 
 .about-text p {
   font-size: 1.2rem;
-  color: #555;
+  color: #ffffff;
   line-height: 1.6;
 }
 
@@ -290,7 +293,7 @@ nav img{
 
 .image-container:hover {
   transform: scale(1.2); 
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 10px 20px rgba(255, 255, 255, 0.815);
 }
 
 .about-image {
@@ -327,11 +330,21 @@ nav img{
   text-align: center;
   padding: 100px 20px;
   min-height: 400px;
-}
-.contact-us h1,p {
-  color: #fff;
-  margin-bottom: 20px;
   
+}
+.contact-us h1 {
+  color: #fff;
+  font-size: 2.5rem; /* Larger font for emphasis */
+  margin-bottom: 15px;
+  font-weight: bold;
+  text-transform: uppercase; /* Adds a professional touch */
+}
+
+.contact-us p {
+  color: #ddd;
+  margin-bottom: 30px;
+  font-size: 1.2rem; /* Improved readability */
+  line-height: 1.6; /* Balanced text spacing */
 }
 .contact-form{
   display: flex;
