--- a/geni informatique/styles.css
+++ b/geni informatique/styles.css
@@ -281,6 +281,38 @@
 .swiper-slide {
   transition: transform 0.5s ease-in-out; 
 }
+.select-menu {
+  display: flex; 
+  align-items: center; 
+  justify-content: center; 
+  margin-bottom: 20px;
+  gap: 10px; 
+}
+
+.select-menu label {
+  font-size: 1rem; 
+  margin: 0; 
+  color: #333; 
+}
+
+.select-menu select {
+  padding: 10px 15px;
+  font-size: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  background-color: #f9f9f9;
+  cursor: pointer;
+}
+
+
+.semester {
+  display: none;
+}
+
+.semester.active {
+  display: block;
+}
+
 
 
   /*--------------------------------------------------*/
