--- a/styles.css
+++ b/styles.css
@@ -394,7 +394,7 @@ nav img{
 
 
 
-/*--------------------------------------- footer  --------------------------------------------------*/
+/*---------------------- footer  ------------------*/
 
 .footer {
   background-color: var(--bg-secondary);
